@@ -51,9 +51,9 @@ ADD_TESTS=add add_bit add_bit_bitnum add_bit_bitsize add_bit_invalid \
 					add_lincom_nfields add_linterp add_linterp_invalid add_multiply \
 					add_multiply_invalid add_phase add_phase_invalid add_polynom \
 					add_protect add_raw add_raw_include add_raw_invalid add_raw_spf \
-					add_raw_type add_rdonly add_recip add_sbit add_scalar add_sort \
-					add_spec add_spec_directive add_spec_invalid add_spec_meta \
-					add_string add_type
+					add_raw_type add_rdonly add_recip add_sbit add_scalar \
+					add_scalar_carray add_sort add_spec add_spec_directive \
+					add_spec_invalid add_spec_meta add_string add_type
 
 ALTER_TESTS=alter_bit_bitnum alter_bit_numbits alter_carray_len \
 						alter_carray_type alter_const alter_cpolynom alter_crecip \
@@ -314,7 +314,8 @@ VLIST_TESTS=vlist vlist_invalid vlist_meta vlist_meta_invalid
 
 XZ_TESTS=xz_get xz_nframes
 
-TESTS=$(ADD_TESTS)        $(ALTER_TESTS)      $(ASCII_TESTS)      \
+TESTS=$(ADD_TESTS)
+TEeTS=$(ADD_TESTS)        $(ALTER_TESTS)      $(ASCII_TESTS)      \
 			$(BOF_TESTS)        $(BZIP_TESTS)       $(CLOSE_TESTS)      \
 			$(CONVERT_TESTS)    $(CREAT_TESTS)      $(CVLIST_TESTS)     \
 			$(DEL_TESTS)        $(DFES_TESTS)       $(ENCODE_TESTS)     \
