@@ -1,0 +1,81 @@
+/* Copyright (C) 2009-2011 D. V. Wiebe
+ *
+ ***************************************************************************
+ *
+ * This file is part of the GetData project.
+ *
+ * GetData is free software; you can redistribute it and/or modify it under
+ * the terms of the GNU Lesser General Public License as published by the
+ * Free Software Foundation; either version 2.1 of the License, or (at your
+ * option) any later version.
+ *
+ * GetData is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+ * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
+ * License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with GetData; if not, write to the Free Software Foundation, Inc.,
+ * 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
+ */
+/* Add a dirfile field */
+#include "test.h"
+
+#include <stdlib.h>
+#include <stdio.h>
+#include <sys/types.h>
+#include <sys/stat.h>
+#include <fcntl.h>
+#include <string.h>
+#include <errno.h>
+#include <math.h>
+
+int main(void)
+{
+  const char *filedir = "dirfile";
+  const char *format = "dirfile/format";
+  int error, r = 0;
+  DIRFILE *D;
+
+  gd_entry_t E, e;
+  E.field = "data";
+  E.field_type = GD_LINCOM_ENTRY;
+  E.fragment_index = 0;
+  E.EN(lincom,n_fields) = 1;
+  E.comp_scal = 0;
+  E.in_fields[0] = "INDEX";
+  E.EN(lincom,m)[0] = 1.;
+  E.scalar[0] = NULL;
+  E.scalar[0 + GD_MAX_LINCOM] = "c";
+  E.scalar_ind[0 + GD_MAX_LINCOM] = 3;
+
+  D = gd_open(filedir, GD_RDWR | GD_CREAT | GD_VERBOSE);
+  gd_add_spec(D, "c CARRAY INT64 1 2 3 4", 0);
+  gd_add(D, &E);
+  error = gd_error(D);
+
+  /* check */
+  gd_entry(D, "data", &e);
+  if (gd_error(D))
+    r = 1;
+  else {
+    CHECKI(e.field_type, GD_LINCOM_ENTRY);
+    CHECKI(e.fragment_index, 0);
+    CHECKI(e.EN(lincom,n_fields), 1);
+    CHECKF(e.EN(lincom,m)[0], 1);
+    CHECKF(e.EN(lincom,b)[0], 4);
+    CHECKP(e.scalar[0]);
+    CHECKS(e.scalar[0 + GD_MAX_LINCOM], "c");
+    CHECKI(e.scalar_ind[0 + GD_MAX_LINCOM], 3);
+    gd_free_entry_strings(&e);
+  }
+
+  gd_close(D);
+
+  unlink(format);
+  rmdir(filedir);
+
+  CHECKI(error, GD_E_OK);
+
+  return r;
+}
