@@ -1,3 +1,9 @@
+2011-11-08   D. V. Wiebe <getdata@ketiltrout.net> svn:615
+	* test/add_scalar_carray.c: Added.
+
+	* src/add.c (_GD_Add): Copy scalar_ind when copying scalars.  Patch from
+	S. J. Benton.
+
 2011-11-08   D. V. Wiebe <getdata@ketiltrout.net> svn:614
 	* test/gzip_put_get.c test/gzip_move_to.c test/gzip_add.c
 	test/gzip_get_put.c test/gzip_put.c: Handle TEST_GZIP && !USE_GZIP.
